Fix Maven compiler config and build issue